// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressBar Snapshots tests should match snapshot 1`] = `
<div>
  <div
    class="component s"
  >
    <svg
      class="svg"
      viewBox="0 0 116 116"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        class="backgroundCircle"
        cx="58"
        cy="58"
        r="54"
        transform="rotate(-90 58 58)"
      />
      <circle
        class="progressCircle positive"
        cx="58"
        cy="58"
        r="54"
        stroke-dasharray="67.85840131753953, 1000"
        transform="rotate(-90 58 58)"
      />
    </svg>
    <div
      class="label"
    >
      <div
        class="component headLine styrene-xsmall medium secondary"
      />
      <div
        class="caption primary primary-small regular"
      />
    </div>
  </div>
</div>
`;

exports[`ProgressBar Snapshots tests should match with view snapshot 1`] = `
<div>
  <div
    class="component s"
  >
    <svg
      class="svg"
      viewBox="0 0 116 116"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        class="backgroundCircle"
        cx="58"
        cy="58"
        r="54"
        transform="rotate(-90 58 58)"
      />
      <circle
        class="progressCircle negative"
        cx="58"
        cy="58"
        r="54"
        stroke-dasharray="67.85840131753953, 1000"
        transform="rotate(-90 58 58)"
      />
    </svg>
    <div
      class="label"
    >
      <div
        class="component headLine styrene-xsmall medium secondary"
      />
      <div
        class="caption primary primary-small regular"
      />
    </div>
  </div>
</div>
`;
